# SimpleECS

./: .gitignore  CMakeLists.txt  README.md  ecs.c  ecs.h  ecs_test.c  main.c
cmake/: FetchCMocka.cmake  TestMacros.cmake
